--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -88,11 +88,11 @@ else
 </div>
 @if (Model.CategoriesList.Count > 0)
 {
-    <h3>Nos Catégories</h3>
+    <h3>Nos catégories</h3>
 }
 else
 {
-    <h3>Aucune Catégories</h3>
+    <h3>Aucune catégorie</h3>
 }
 <div class="d-flex flex-wrap align-content-start bg-light" style="margin-bottom:50px;">
     @foreach (var category in Model.CategoriesList)
