--- a/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
@@ -68,7 +68,7 @@
             }
             else
             {
-                <h3 style="color:@text; font-family:@font">Catalogue de tout les vendeurs </h3>
+                <h3 style="color:@text; font-family:@font">Catalogue de tous les vendeurs </h3>
 
             }
             
@@ -87,7 +87,7 @@
                             <div class="flex-grow-1">
                                 <div class="input-group" style="width:400px;">
                                     <!-- Adjust width and remove margin -->
-                            @Html.TextBoxFor(model => model.searchString, new { placeholder = "Rechercher par Nom,Description ou NoProduit", @class = "form-control", @style="background-color:" + backgroundBarre + ";color:" + textBarre })
+                            @Html.TextBoxFor(model => model.searchString, new { placeholder = "Rechercher par Nom, description ou no de produit", @class = "form-control", @style="background-color:" + backgroundBarre + ";color:" + textBarre })
 
                                     <div class="input-group-append">
                                         <span class="input-group-text">
