--- a/Projet Web Commerce/Views/PPProduits/Create.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Create.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @model Projet_Web_Commerce.Models.PPProduits
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Ajouter";
     var user = await _userManager.GetUserAsync(User);    
 }
 
@@ -19,7 +19,7 @@
 }
 else
 {
-    <h1>Ajouter Nouveau Produit</h1>
+    <h1>Ajouter un nouveau produit</h1>
 
     <h4>Produit</h4>
     <hr />
@@ -138,13 +138,11 @@ else
 
                 <div class="form-group">
                     <input type="submit" value="Ajouter" class="btn btn-primary" />
+                    |
+                    <a class="btn btn-success" asp-action="Index">Retour à la liste</a>
                 </div>
             </form>
         </div>
-    </div>
-
-    <div>
-        <a asp-action="Index">Retour à la liste</a>
     </div>
 
     @section Scripts {
