--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -7,7 +7,7 @@
 @using System.IO
 @inject IWebHostEnvironment env
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Détails";
     var user = await _userManager.GetUserAsync(User);
 
     var vendeur = Model.PPVendeurs.NomAffaires;
@@ -215,7 +215,7 @@ else
             else
             {
                 <dd class="col-sm-10">
-                    Le prix de vente n'est pas précisée
+                    Le prix de vente n'est pas précisé
                 </dd>
             }
 
@@ -309,9 +309,9 @@ else
         }
         else
         {
-            <a asp-action="Edit" asp-route-id="@Model?.NoProduit">Modifier</a>
+            <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.NoProduit">Modifier</a>
             <text> | </text>
-            <a asp-action="Index">Retour à la liste</a>
+            <a class="btn btn-success" asp-action="Index">Retour à la liste</a>
         }
     </div>
 
