--- a/Projet Web Commerce/Views/Commande/CommandeCompleter.cshtml
+++ b/Projet Web Commerce/Views/Commande/CommandeCompleter.cshtml
@@ -1,10 +1,13 @@
 ﻿@model Projet_Web_Commerce.API.PostResponseCommander
 
-    <h1>Post Response Commander</h1>
+    <h1>Votre commande à été effectuée
+    </h1>
 
     <div>
         <h4>No Autorisation: @ViewBag.NoAutorisation</h4>
     <h4>Date Autorisation: @ViewBag.DateAutorisation</h4>
     <h4>Frais Marchand: @ViewBag.FraisMarchand</h4>
     <h4>Info Supplémentaire: @ViewBag.InfoSuppl</h4>
+
+    <a class="btn btn-primary" asp-controller="PPHistoriquePaiements" asp-action="Download" asp-route-id="@ViewBag.NoCommande">Télécharger le reçu</a>
     </div>
