--- a/Projet Web Commerce/Views/Commande/ConfirmerCommande.cshtml
+++ b/Projet Web Commerce/Views/Commande/ConfirmerCommande.cshtml
@@ -40,7 +40,7 @@
                                             <div class="col-md-3 col-lg-2 col-xl-6">
                                                 <div class="form-floating mb-1">
                                                     <input asp-for="@Model.NomClient" class="form-control" placeholder="Veuillez entrer votre nom." />
-                                                    <label asp-for="@Model." class="form-label"></label>
+                                                    <label asp-for="@Model." class="form-label">Nom</label>
                                                     <span asp-validation-for="@Model.NomClient" class="text-danger"></span>
                                                 </div>
                                             </div>
