--- a/Projet Web Commerce/Views/Paniers/Index.cshtml
+++ b/Projet Web Commerce/Views/Paniers/Index.cshtml
@@ -36,7 +36,7 @@
                                 @if (!string.IsNullOrEmpty(vendeur.Prenom))
                                 {
                                     <p class="card-text">
-                                        <b>Prenom :</b>
+                                        <b>Prénom :</b>
                                         @Html.DisplayFor(modelItem => vendeur.Prenom)
                                     </p>
                                 }
@@ -66,7 +66,7 @@
                                     @Html.DisplayFor(modelItem => nbItems)
                                 </p>
                                 <p class="card-text">
-                                    <b>Date de creation :</b>
+                                    <b>Date de création :</b>
                                     @Html.DisplayFor(modelItem => oldestProductDate)
                                 </p>
                                 <div>
