--- a/Projet Web Commerce/Views/Commande/CommandeCompleter.cshtml
+++ b/Projet Web Commerce/Views/Commande/CommandeCompleter.cshtml
@@ -10,4 +10,10 @@
     <h4>Info Supplémentaire: @ViewBag.InfoSuppl</h4>
 
     <a class="btn btn-primary" asp-controller="PPHistoriquePaiements" asp-action="Download" asp-route-id="@ViewBag.NoCommande">Télécharger le reçu</a>
+
+    <a asp-controller="MainMenu"
+       asp-action="Catalogue"
+       class="btn btn-secondary" style="background-color:#808080; color: #FFFFFF; width:auto; margin-top:10px; margin-left:12px">
+        Retour au catalogue
+    </a>
     </div>
