--- a/Projet Web Commerce/Views/PPGestionnaires/ListeClientsInactifs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeClientsInactifs.cshtml
@@ -94,7 +94,7 @@
             </div>
             @if (Model.MoisAnneesDistinctsList.Count() == 0)
             {
-                <p>Aucun clients inactif.</p>
+                <p>Aucun client inactif.</p>
             }
         </section>
     </div>
