--- a/Projet Web Commerce/Views/PPGestionnaires/ListeRedevances.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeRedevances.cshtml
@@ -72,7 +72,7 @@
                 }
                 @if (Model.MoisAnneesDistinctsList.Count() == 0)
                 {
-                    <p>Il n'y a aucun Vendeurs</p>
+                    <p>Il n'y a aucun vendeur</p>
                 }
             </div>
         </section>
