--- a/Projet Web Commerce/Views/Shared/GestionVendeursPages.cshtml
+++ b/Projet Web Commerce/Views/Shared/GestionVendeursPages.cshtml
@@ -64,11 +64,11 @@
     </a>
     <a class="btn @(Model == "ListClientFraude" ? "actif" : "pasActif")"
        asp-area="" asp-controller="PPGestionnaires" asp-action="ListClientFraude">
-        Liste des clients non confirmer
+        Liste des clients non confirmés
     </a>
     <a class="btn @(Model == "ListVendeurFraude" ? "actif" : "pasActif")"
        asp-area="" asp-controller="PPGestionnaires" asp-action="ListVendeurFraude">
-        Liste des vendeurs non confirmer
+        Liste des vendeurs non confirmés
     </a>
     <a class="btn @(Model == "Statistiques" ? "actif" : "pasActif")"
        asp-area="" asp-controller="PPGestionnaires" asp-action="Statistiques">
