--- a/Projet Web Commerce/Views/PPGestionnaires/InactifV.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/InactifV.cshtml
@@ -1,11 +1,14 @@
 ﻿@model Projet_Web_Commerce.Models.PPVendeurs
+@{
+    ViewData["Title"] = "Inactif vendeur";
+}
 
-<h2>Confirmation que vous voulez rendre ce compte inactif </h2>
+<h2>Confirmation que vous voulez rendre ce compte inactif</h2>
 
 <p>Compte de @Model.AdresseEmail</p>
 
 <form asp-action="InactifV" method="post">
     <input type="hidden" name="id" value="@Model.NoVendeur" />
-    <button type="submit" class="btn btn-danger">Confirmer le chagment</button>
+    <button type="submit" class="btn btn-danger">Confirmer le changement</button>
     <a href="@Url.Action("ListeVendeurs")" class="btn btn-secondary">Annuler</a>
 </form>
