--- a/Projet Web Commerce/Views/PPGestionnaires/ListVendeurFraude.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListVendeurFraude.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Projet_Web_Commerce.Models.ModelListeVendeurs
 @{
-    ViewData["Title"] = "Liste des vendeurs fraude";
+    ViewData["Title"] = "Liste des vendeurs non confirmés";
 }
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -82,7 +82,7 @@
                 }
                 @if (Model.MoisAnneesDistinctsList.Count() == 0)
                 {
-                    <p>Aucun vendeur non confirmer.</p>
+                    <p>Aucun vendeur non confirmé.</p>
                 }
             </div>
         </section>
