--- a/Projet Web Commerce/Views/PPHistoriquePaiements/Index.cshtml
+++ b/Projet Web Commerce/Views/PPHistoriquePaiements/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<Projet_Web_Commerce.Models.PPHistoriquePaiements>
+@{
+    ViewData["Title"] = "Historique de paiements";
+}
 
 <!DOCTYPE html>
 <html>
@@ -14,6 +17,7 @@
 </head>
 <body>
     <div class="container">
+        <h2>Historique des paiements</h2>
         <div class="row">
             @foreach (var item in Model)
             {
