--- a/Projet Web Commerce/Views/PPCategories/Index.cshtml
+++ b/Projet Web Commerce/Views/PPCategories/Index.cshtml
@@ -7,12 +7,12 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Liste de Categories</title>
+    <title>Liste de Catégories</title>
 </head>
 <body>
     <h2>Liste de Categories</h2>
 <p>
-    <a asp-action="Create">Ajouter un Nouveau Categorie</a>
+    <a asp-action="Create">Ajouter un Nouveau Catégorie</a>
 </p>
 <table class="table">
     <thead>
