--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
@@ -33,6 +33,7 @@
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary" style="color: rgb(249, 229, 71); background-color: rgb(124, 105, 146)">Se connecter</button>
                 </div>
                 <div>
+                    <br />
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Mot de passe oublié?</a>
                     </p>
@@ -40,7 +41,7 @@
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">S'enregistrer comme nouvel utilisateur</a>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Renvoyer la confirmation du Email</a>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Renvoyer la confirmation du courriel</a>
                     </p>
                 </div>
             </form>
