--- a/Projet Web Commerce/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -5,16 +5,16 @@
 }
 <a asp-area="Identity" asp-page="/Account/Login">Retour</a>
 <h1>@ViewData["Title"]</h1>
-<h2>Enter votre adresse courriel.</h2>
+<h2>Entrez votre adresse courriel.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger" role="alert"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <input asp-for="Input.Courriel" class="form-control" aria-required="true" placeholder="name@example.com" />
+                <label asp-for="Input.Courriel" class="form-label"></label>
+                <span asp-validation-for="Input.Courriel" class="text-danger"></span>
             </div>
             <button type="submit" class="w-100 btn btn-lg btn-primary">Renvoyer</button>
         </form>
